[project]
name = "video-infra"
version = "0.1.0"
description = "Video metadata and download infrastructure for solo-company."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "yt-dlp>=2025.12.0",
]

[project.scripts]
video-infra = "video_infra.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
